optimize configuration to avoid running out of memory
Signed-off-by: Thomas Maschler <tmaschler@wri.org>